--- a/titconn-sisecam/deployment.yaml
+++ b/titconn-sisecam/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: titconn-keyvault-container
-        image: harbor.teknobulut.net/titconnsisecam/titconn-keyvault:2024.2.17.24
+        image: harbor.teknobulut.net/titconnsisecam/titconn-keyvault:2024.2.17.25
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -81,7 +81,7 @@ spec:
     spec:
       containers:
       - name: titconn-hub-container
-        image: harbor.teknobulut.net/titconnsisecam/titconn-hub:2024.2.17.24
+        image: harbor.teknobulut.net/titconnsisecam/titconn-hub:2024.2.17.25
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -148,7 +148,7 @@ spec:
     spec:
       containers:
       - name: titconn-api-container
-        image: harbor.teknobulut.net/titconnsisecam/titconn-api:2024.2.17.24
+        image: harbor.teknobulut.net/titconnsisecam/titconn-api:2024.2.17.25
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -215,7 +215,7 @@ spec:
     spec:
       containers:
       - name: titconn-microservice-container
-        image: harbor.teknobulut.net/titconnsisecam/titconn-microservice:2024.2.17.24
+        image: harbor.teknobulut.net/titconnsisecam/titconn-microservice:2024.2.17.25
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -263,6 +263,73 @@ spec:
             backend:
               service:
                 name: titconn-microservice-service
+                port:
+                  number: 80
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: titconn-scheduler-deployment
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: titconn-scheduler
+  template:
+    metadata:
+      labels:
+        app: titconn-scheduler
+    spec:
+      containers:
+      - name: titconn-scheduler-container
+        image: harbor.teknobulut.net/titconnsisecam/titconn-scheduler:2024.2.17.25
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 80
+          protocol: TCP
+        env:
+            - name: ASPNETCORE_URLS
+              value: http://+:80
+      imagePullSecrets:
+      - name: harbor-registry-secret
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: titconn-scheduler-service
+  labels:
+   app: titconn-scheduler-service
+spec:
+  selector:
+    app: titconn-scheduler
+  ports:
+    - port: 80
+      protocol: TCP
+      targetPort: 80
+  type: ClusterIP
+---
+kind: Ingress
+apiVersion: networking.k8s.io/v1
+metadata:
+  name: titconn-scheduler-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+spec:
+  ingressClassName: nginx
+  tls:
+    - hosts:
+        - titconn-sisecam-scheduler.teknobulut.net
+      secretName: titconn-scheduler-ingress
+  rules:
+    - host: titconn-sisecam-scheduler.teknobulut.net
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: titconn-scheduler-service
                 port:
                   number: 80
 
