--- a/titconn/deployment.yaml
+++ b/titconn/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: titconn-keyvault-container
-        image: harbor.teknobulut.net/titconn/titconn-keyvault:2024.2.20.13
+        image: harbor.teknobulut.net/titconn/titconn-keyvault:2024.2.20.14
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -81,7 +81,7 @@ spec:
     spec:
       containers:
       - name: titconn-hub-container
-        image: harbor.teknobulut.net/titconn/titconn-hub:2024.2.20.13
+        image: harbor.teknobulut.net/titconn/titconn-hub:2024.2.20.14
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -148,7 +148,7 @@ spec:
     spec:
       containers:
       - name: titconn-api-container
-        image: harbor.teknobulut.net/titconn/titconn-api:2024.2.20.13
+        image: harbor.teknobulut.net/titconn/titconn-api:2024.2.20.14
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -215,7 +215,7 @@ spec:
     spec:
       containers:
       - name: titconn-microservice-container
-        image: harbor.teknobulut.net/titconn/titconn-microservice:2024.2.20.13
+        image: harbor.teknobulut.net/titconn/titconn-microservice:2024.2.20.14
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -257,7 +257,7 @@ spec:
   rules:
     - host: titconn-microservice.teknobulut.net
       http:
-        paths:/Users/yalcin.elmas/Desktop/Working/Code/argocd/titconn/deployment.ori
+        paths:
           - path: /
             pathType: Prefix
             backend:
@@ -282,7 +282,7 @@ spec:
     spec:
       containers:
       - name: titconn-scheduler-container
-        image: harbor.teknobulut.net/titconn/titconn-scheduler:2024.2.20.13
+        image: harbor.teknobulut.net/titconn/titconn-scheduler:2024.2.20.14
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -349,7 +349,7 @@ spec:
     spec:
       containers:
       - name: titconn-app-container
-        image: harbor.teknobulut.net/titconn/titconn-app:2024.2.20.13
+        image: harbor.teknobulut.net/titconn/titconn-app:2024.2.20.14
         imagePullPolicy: Always
         ports:
         - containerPort: 80
