--- a/titconn-sisecam/deployment.yaml
+++ b/titconn-sisecam/deployment.yaml
@@ -14,14 +14,14 @@ spec:
     spec:
       containers:
       - name: titconn-keyvault-container
-        image: http://images.teknobulut.net/titconnsisecam/titconn-keyvault:2024.5.8.4
+        image: images.teknobulut.net/titconnsisecam/titconn-keyvault:2024.5.8.5
         imagePullPolicy: Always
         ports:
         - containerPort: 80
           protocol: TCP
         env:
             - name: ASPNETCORE_URLS
-              value: http://+:80
+              value: +:80
 ---
 apiVersion: v1
 kind: Service
@@ -79,14 +79,14 @@ spec:
     spec:
       containers:
       - name: titconn-hub-container
-        image: http://images.teknobulut.net/titconnsisecam/titconn-hub:2024.5.8.4
+        image: images.teknobulut.net/titconnsisecam/titconn-hub:2024.5.8.5
         imagePullPolicy: Always
         ports:
         - containerPort: 80
           protocol: TCP
         env:
             - name: ASPNETCORE_URLS
-              value: http://+:80
+              value: +:80
 ---
 apiVersion: v1
 kind: Service
@@ -144,14 +144,14 @@ spec:
     spec:
       containers:
       - name: titconn-api-container
-        image: http://images.teknobulut.net/titconnsisecam/titconn-api:2024.5.8.4
+        image: images.teknobulut.net/titconnsisecam/titconn-api:2024.5.8.5
         imagePullPolicy: Always
         ports:
         - containerPort: 80
           protocol: TCP
         env:
             - name: ASPNETCORE_URLS
-              value: http://+:80
+              value: +:80
 ---
 apiVersion: v1
 kind: Service
@@ -209,14 +209,14 @@ spec:
     spec:
       containers:
       - name: titconn-microservice-container
-        image: http://images.teknobulut.net/titconnsisecam/titconn-microservice:2024.5.8.4
+        image: images.teknobulut.net/titconnsisecam/titconn-microservice:2024.5.8.5
         imagePullPolicy: Always
         ports:
         - containerPort: 80
           protocol: TCP
         env:
             - name: ASPNETCORE_URLS
-              value: http://+:80
+              value: +:80
 ---
 apiVersion: v1
 kind: Service
@@ -274,14 +274,14 @@ spec:
     spec:
       containers:
       - name: titconn-scheduler-container
-        image: http://images.teknobulut.net/titconnsisecam/titconn-scheduler:2024.5.8.4
+        image: images.teknobulut.net/titconnsisecam/titconn-scheduler:2024.5.8.5
         imagePullPolicy: Always
         ports:
         - containerPort: 80
           protocol: TCP
         env:
             - name: ASPNETCORE_URLS
-              value: http://+:80
+              value: +:80
 ---
 apiVersion: v1
 kind: Service
@@ -339,14 +339,14 @@ spec:
     spec:
       containers:
       - name: titconn-app-container
-        image: http://images.teknobulut.net/titconnsisecam/titconn-app:2024.5.8.4
+        image: images.teknobulut.net/titconnsisecam/titconn-app:2024.5.8.5
         imagePullPolicy: Always
         ports:
         - containerPort: 80
           protocol: TCP
         env:
             - name: ASPNETCORE_URLS
-              value: http://+:80
+              value: +:80
 ---
 apiVersion: v1
 kind: Service
