--- a/titconn-keyvault/deployment.yaml
+++ b/titconn-keyvault/deployment.yaml
@@ -1,6 +1,65 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: titconn-keyvault-deployment
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: titconn-keyvault
+  template:
+    metadata:
+      labels:
+        app: titconn-keyvault
+    spec:
+      containers:
+      - name: titconn-keyvault-container
+        image: images.teknobulut.net/titconnsisecam/titconn-keyvault:2024.5.10.1
+        imagePullPolicy: Always
+        env:
+            - name: ASPNETCORE_URLS
+      imagePullSecrets:
+      - name: harborsecret
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: titconn-keyvault-service
+  labels:
+   app: titconn-keyvault-service
+spec:
+  selector:
+    app: titconn-keyvault
+  ports:
+    - port: 8080
+      protocol: TCP
+      targetPort: 8080
+  type: ClusterIP
+---
+kind: Ingress
+apiVersion: networking.k8s.io/v1
+metadata:
+  name: titconn-keyvault-ingress
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: titconn-sisecam-keyvault.teknobulut.net
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+               service:
+                 name: titconn-keyvault-service
+                 port: 
+                   number: 8080
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
   name: titconn-hub-deployment
 spec:
   replicas: 1
@@ -14,7 +73,7 @@ spec:
     spec:
       containers:
       - name: titconn-hub-container
-        image: images.teknobulut.net/titconndesa/titconn-hub:{version}
+        image: images.teknobulut.net/titconnsisecam/titconn-hub:2024.5.10.1
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -46,7 +105,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: desa-hub.teknobulut.net
+    - host: titconn-sisecam-hub.teknobulut.net
       http:
         paths:
           - path: /
@@ -73,7 +132,7 @@ spec:
     spec:
       containers:
       - name: titconn-api-container
-        image: images.teknobulut.net/titconndesa/titconn-api:{version}
+        image: images.teknobulut.net/titconnsisecam/titconn-api:2024.5.10.1
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -105,7 +164,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: desa-api.teknobulut.net
+    - host: titconn-sisecam-api.teknobulut.net
       http:
         paths:
           - path: /
@@ -132,7 +191,7 @@ spec:
     spec:
       containers:
       - name: titconn-microservice-container
-        image: images.teknobulut.net/titconndesa/titconn-microservice:{version}
+        image: images.teknobulut.net/titconnsisecam/titconn-microservice:2024.5.10.1
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -164,7 +223,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: desa-microservice.teknobulut.net
+    - host: titconn-sisecam-microservice.teknobulut.net
       http:
         paths:
           - path: /
@@ -191,7 +250,7 @@ spec:
     spec:
       containers:
       - name: titconn-scheduler-container
-        image: images.teknobulut.net/titconndesa/titconn-scheduler:{version}
+        image: images.teknobulut.net/titconnsisecam/titconn-scheduler:2024.5.10.1
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -223,7 +282,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: desa-scheduler.teknobulut.net
+    - host: titconn-sisecam-scheduler.teknobulut.net
       http:
         paths:
           - path: /
@@ -250,7 +309,7 @@ spec:
     spec:
       containers:
       - name: titconn-app-container
-        image: images.teknobulut.net/titconndesa/titconn-app:{version}
+        image: images.teknobulut.net/titconnsisecam/titconn-app:2024.5.10.1
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -282,7 +341,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: desa-app.teknobulut.net
+    - host: titconn-sisecam-app.teknobulut.net
       http:
         paths:
           - path: /
