--- a/titconn-br/deployment.yaml
+++ b/titconn-br/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: titconn-hub-container
-        image: images.teknobulut.net/titconn/titconn-hub:2024.12.25.5
+        image: images.teknobulut.net/titconnbr/titconn-hub:2025.1.21.4
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -46,7 +46,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: titconn-hub.teknobulut.net
+    - host: wms-hub.brmagazacilik.com.tr
       http:
         paths:
           - path: /
@@ -73,7 +73,7 @@ spec:
     spec:
       containers:
       - name: titconn-api-container
-        image: images.teknobulut.net/titconn/titconn-api:2024.12.25.5
+        image: images.teknobulut.net/titconnbr/titconn-api:2025.1.21.4
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -105,7 +105,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: titconn-api.teknobulut.net
+    - host: wms-api.brmagazacilik.com.tr
       http:
         paths:
           - path: /
@@ -113,124 +113,6 @@ spec:
             backend:
                service:
                  name: titconn-api-service
-                 port: 
-                   number: 8080
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: titconn-microservice-deployment
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: titconn-microservice
-  template:
-    metadata:
-      labels:
-        app: titconn-microservice
-    spec:
-      containers:
-      - name: titconn-microservice-container
-        image: images.teknobulut.net/titconn/titconn-microservice:2024.12.25.5
-        imagePullPolicy: Always
-        env:
-            - name: ASPNETCORE_URLS
-      imagePullSecrets:
-      - name: harborsecret
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: titconn-microservice-service
-  labels:
-   app: titconn-microservice-service
-spec:
-  selector:
-    app: titconn-microservice
-  ports:
-    - port: 8080
-      protocol: TCP
-      targetPort: 8080
-  type: ClusterIP
----
-kind: Ingress
-apiVersion: networking.k8s.io/v1
-metadata:
-  name: titconn-microservice-ingress
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-spec:
-  ingressClassName: nginx
-  rules:
-    - host: titconn-microservice.teknobulut.net
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-               service:
-                 name: titconn-microservice-service
-                 port: 
-                   number: 8080
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: titconn-scheduler-deployment
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: titconn-scheduler
-  template:
-    metadata:
-      labels:
-        app: titconn-scheduler
-    spec:
-      containers:
-      - name: titconn-scheduler-container
-        image: images.teknobulut.net/titconn/titconn-scheduler:2024.12.25.5
-        imagePullPolicy: Always
-        env:
-            - name: ASPNETCORE_URLS
-      imagePullSecrets:
-      - name: harborsecret
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: titconn-scheduler-service
-  labels:
-   app: titconn-scheduler-service
-spec:
-  selector:
-    app: titconn-scheduler
-  ports:
-    - port: 8080
-      protocol: TCP
-      targetPort: 8080
-  type: ClusterIP
----
-kind: Ingress
-apiVersion: networking.k8s.io/v1
-metadata:
-  name: titconn-scheduler-ingress
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-spec:
-  ingressClassName: nginx
-  rules:
-    - host: titconn-scheduler.teknobulut.net
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-               service:
-                 name: titconn-scheduler-service
                  port: 
                    number: 8080
 ---
@@ -250,7 +132,7 @@ spec:
     spec:
       containers:
       - name: titconn-app-container
-        image: images.teknobulut.net/titconn/titconn-app:2024.12.25.5
+        image: images.teknobulut.net/titconnbr/titconn-app:2025.1.21.4
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -282,7 +164,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: titconn-app.teknobulut.net
+    - host: wms-app.brmagazacilik.com.tr
       http:
         paths:
           - path: /
