--- a/titconn-br/deployment.yaml
+++ b/titconn-br/deployment.yaml
@@ -1,3 +1,39 @@
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: local-storage
+provisioner: kubernetes.io/no-provisioner
+volumeBindingMode: WaitForFirstConsumer
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: titconn-pv
+spec:
+  capacity:
+    storage: 100Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: "local-storage"
+  hostPath:
+    path: /home/ubuntu/project/titconn
+    
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: titconn-pvc
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: "local-storage"
+  
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,7 +50,7 @@ spec:
     spec:
       containers:
       - name: titconn-hub-container
-        image: images.teknobulut.net/titconnbr/titconn-hub:2025.1.21.6
+        image: images.teknobulut.net/titconnbr/titconn-hub:2025.1.21.7
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -73,12 +109,20 @@ spec:
     spec:
       containers:
       - name: titconn-api-container
-        image: images.teknobulut.net/titconnbr/titconn-api:2025.1.21.6
+        image: images.teknobulut.net/titconnbr/titconn-api:2025.1.21.7
         imagePullPolicy: Always
+        volumeMounts:
+            - name: titconn-data
+            mountPath: /var/titconn
         env:
             - name: ASPNETCORE_URLS
       imagePullSecrets:
       - name: harborsecret
+      volumes:
+          - name: titconn-data
+            persistentVolumeClaim:
+               claimName: titconn-pvc
+
 ---
 apiVersion: v1
 kind: Service
@@ -132,7 +176,7 @@ spec:
     spec:
       containers:
       - name: titconn-app-container
-        image: images.teknobulut.net/titconnbr/titconn-app:2025.1.21.6
+        image: images.teknobulut.net/titconnbr/titconn-app:2025.1.21.7
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
