--- a/titconn-keyvault/deployment.yaml
+++ b/titconn-keyvault/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: titconn-keyvault-container
-        image: harbor-portal.harbor.svc.cluster.local/titconnkeyvault/titconn-keyvault:2025.1.24.4
+        image: images.teknobulut.net/titconnkeyvault/titconn-keyvault:2025.1.24.4
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
