--- a/dhlgateway/deployment.yaml
+++ b/dhlgateway/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: titconn-app-container
-        image: harbor-core.harbor.svc.cluster.local/titconndhlgateway/titconn-app:2025.1.24.1
+        image: images.teknobulut.net/titconndhlgateway/titconn-app:2025.1.24.1
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
