--- a/titconn-keyvault-br/deployment.yaml
+++ b/titconn-keyvault-br/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: titconn-keyvault-container
-        image: repo.teknobulut.net/titconnkeyvault/titconn-keyvault:2025.4.7.1
+        image: images.teknobulut.net/titconnbr/titconn-keyvault:2025.4.7.2
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
