--- a/titconn-br/deployment.yaml
+++ b/titconn-br/deployment.yaml
@@ -291,6 +291,13 @@ spec:
               mountPath: /var/titconn
         env:
             - name: ASPNETCORE_URLS
+        resources:
+          requests:
+            memory: "1024Mi"
+            cpu: "1000m"
+          limits:
+            memory: "1024Mi"
+            cpu: "1000m"
       imagePullSecrets:
       - name: harborsecret
       volumes:
