--- a/titconn-br/deployment.yaml
+++ b/titconn-br/deployment.yaml
@@ -296,11 +296,9 @@ spec:
             - name: ASPNETCORE_URLS
         resources:
           requests:
-            memory: "2048Mi"
-            cpu: "2000m"
+            memory: "5Gi"
           limits:
-            memory: "2048Mi"
-            cpu: "2000m"
+            memory: "5Gi"
       imagePullSecrets:
       - name: harborsecret
       volumes:
