--- a/titconn-br/deployment.yaml
+++ b/titconn-br/deployment.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: titconn-hub-container
-        image: images.teknobulut.net/titconnbr/titconn-hub:2025.4.11.2
+        image: images.teknobulut.net/titconnbr/titconn-hub:2025.4.14.1
         imagePullPolicy: Always
         volumeMounts:
             - name: titconn-data
@@ -62,6 +62,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
 spec:
   ingressClassName: nginx
   rules:
@@ -93,7 +95,7 @@ spec:
     spec:
       containers:
       - name: titconn-api-container
-        image: images.teknobulut.net/titconnbr/titconn-api:2025.4.11.2
+        image: images.teknobulut.net/titconnbr/titconn-api:2025.4.14.1
         imagePullPolicy: Always
         volumeMounts:
             - name: titconn-data
@@ -130,6 +132,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
 spec:
   ingressClassName: nginx
   rules:
@@ -161,7 +165,7 @@ spec:
     spec:
       containers:
       - name: titconn-app-container
-        image: images.teknobulut.net/titconnbr/titconn-app:2025.4.11.2
+        image: images.teknobulut.net/titconnbr/titconn-app:2025.4.14.1
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -190,6 +194,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
 spec:
   ingressClassName: nginx
   rules:
@@ -221,7 +227,7 @@ spec:
     spec:
       containers:
       - name: titconn-microservice-container
-        image: images.teknobulut.net/titconnbr/titconn-microservice:2025.4.11.2
+        image: images.teknobulut.net/titconnbr/titconn-microservice:2025.4.14.1
         imagePullPolicy: Always
         volumeMounts:
             - name: titconn-data
@@ -257,6 +263,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
 spec:
   ingressClassName: nginx
   rules:
@@ -287,7 +295,7 @@ spec:
     spec:
       containers:
       - name: titconn-scheduler-container
-        image: images.teknobulut.net/titconnbr/titconn-scheduler:2025.4.11.2
+        image: images.teknobulut.net/titconnbr/titconn-scheduler:2025.4.14.1
         imagePullPolicy: Always
         volumeMounts:
             - name: titconn-data
@@ -328,6 +336,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
 spec:
   ingressClassName: nginx
   rules:
