--- a/neon-shard-level-designer/deployment.yaml
+++ b/neon-shard-level-designer/deployment.yaml
@@ -36,6 +36,9 @@ metadata:
   name: puzzle-api-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
 spec:
   ingressClassName: nginx
   rules:
