--- a/dhlgateway/deployment.yaml
+++ b/dhlgateway/deployment.yaml
@@ -44,6 +44,7 @@ metadata:
     cert-manager.io/issuer: letsencrypt-prod
     kubernetes.io/ingress.class: nginx
     #nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    kubernetes.io/tls-acme: 'true'
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
