--- a/dhlgateway/deployment.yaml
+++ b/dhlgateway/deployment.yaml
@@ -36,6 +36,22 @@ spec:
       targetPort: 8080
   type: ClusterIP
 ---
+apiVersion: cert-manager.io/v1
+kind: Issuer
+metadata:
+  name: letsencrypt-prod
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory
+    email: info@titconn.com
+    privateKeySecretRef:
+      name: letsencrypt-prod
+    solvers:
+    - selector: {}
+      http01:
+        ingress:
+          class: nginx
+---
 kind: Ingress
 apiVersion: networking.k8s.io/v1
 metadata:
