--- a/dhlgateway/deployment.yaml
+++ b/dhlgateway/deployment.yaml
@@ -51,6 +51,16 @@ spec:
       http01:
         ingress:
           class: nginx
+          ingressTemplate:
+            metadata:
+              annotations:
+                nginx.ingress.kubernetes.io/ssl-redirect: "false"
+            spec:
+              rules:
+              - http:
+                  paths:
+                  - path: /.well-known/acme-challenge/
+                    pathType: Prefix
 ---
 kind: Ingress
 apiVersion: networking.k8s.io/v1
