--- a/dhlgateway/deployment.yaml
+++ b/dhlgateway/deployment.yaml
@@ -47,8 +47,7 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-prod
     solvers:
-    - selector: {}
-      http01:
+    - http01:
         ingress:
           class: nginx
           ingressTemplate:
