--- a/dhlgateway/deployment.yaml
+++ b/dhlgateway/deployment.yaml
@@ -59,7 +59,7 @@ spec:
               - http:
                   paths:
                   - path: /.well-known/acme-challenge/
-                    pathType: Prefix
+                    pathType: ImplementationSpecific
 ---
 kind: Ingress
 apiVersion: networking.k8s.io/v1
